--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -15,8 +15,8 @@
                     <div class="bold-title single-line">
                         <span class="mainTitle">组织机构图</span>
                         <div class="subTitle">
-                            (<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
-                            <span ng-bind="selectedCriteria.banzu.description">班组</span>)
+                            (<span ng-bind="selectedCriteria.kuqu.whse_code + '-'"></span>
+                            <span ng-bind="selectedCriteria.banzu.description"></span>)
                         </div>
                     </div>
                 </div>
