--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -25,8 +25,8 @@
                         <span class="mainTitle" ng-bind="KPITitle"></span>
                         <span class="subTitle">
                             (<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
-                            <span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
-                            <span ng-if="!isLine" ng-hide="aspect=='member'" ng-bind="selectedCriteria.banci.shift_code">班次</span>)
+                            <span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description">班组</span>
+                            <span ng-if="!isLine" ng-hide="aspect=='member'" ng-bind="selectedCriteria.banci.shift_code+'-'">班次</span>)
                         </span>
                     </div>
                 </div>
