--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -10,8 +10,8 @@
 			  			<span class="mainTitle">KPI跟踪-<span ng-bind="aspectTitle"></span></span>
 						<div class="subTitle">
 				  			(<span ng-bind="criteriaFromCache.kuqu?criteriaFromCache.kuqu.whse_code:''"></span>
-				  			<span ng-if="!isLine" ng-bind="'-'+criteriaFromCache.banzu?criteriaFromCache.banzu.description:''"></span>
-				  			<span ng-if="!isLine" ng-bind="'-'+criteriaFromCache.banci?criteriaFromCache.banci.shift_code:''"></span>)</div>
+				  			<span ng-if="!isLine" ng-bind="'-'+(criteriaFromCache.banzu?criteriaFromCache.banzu.description+'-':'')"></span>
+				  			<span ng-if="!isLine" ng-bind="criteriaFromCache.banci?criteriaFromCache.banci.shift_code:''"></span>)</div>
 						</div>
 				</div>
 			</div>
