--- a/www/templates/kpi-group.html
+++ b/www/templates/kpi-group.html
@@ -10,7 +10,7 @@
 			  			<span class="mainTitle">KPI跟踪</span>
 						<div class="subTitle">
 				  			(<span ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code:''"></span>
-				  			<span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu?selectedCriteria.banzu.description+'-':''"></span>
+				  			<span ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
 				  			<span ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
 				  		</div>
 
