--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -10,8 +10,8 @@
 			  			<div style="height: 100%; display: inline-block; position: relative;">
 				  			<span class="mainTitle">考勤汇总<br/>
 				  				<span class="subTitle">
-									(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
-									<span ng-bind="selectedCriteria.banzu.description">班组</span>-
+									(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
+									<span ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
 									<span ng-bind="selectedCriteria.banci.shift_code">班次</span>)
 								</span>
 				  			</span>
