--- a/www/templates/lgjh.html
+++ b/www/templates/lgjh.html
@@ -9,8 +9,8 @@
 			  		<div class="bold-title single-line">
 			  			<span class="mainTitle">岗位轮岗计划</span>
 						<div class="subTitle">
-							(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
-							<span ng-bind="selectedCriteria.banzu.description">班组</span>-
+							(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
+							<span ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
 							<span ng-bind="selectedCriteria.banci.shift_code">班次</span>)
 						</div>
 			  		</div>
