--- a/www/templates/cost-view-wall.html
+++ b/www/templates/cost-view-wall.html
@@ -93,8 +93,8 @@
 		</div>
     </ion-content>
     <ion-footer-bar>
-    	<div>
-    		<div class="clear footer green-cross color-menu-type" style="">
+    	<div style="width: 100%;">
+    		<div class="clear footer green-cross color-menu-type">
 				
 				<div class="twrapper"><div class="type indicator clear">
 					<div class="value"><span class="circle cst-stop">&nbsp;</span></div>
@@ -111,25 +111,6 @@
 					<div class="name">已点检待正常运行</div>
 				</div></div>
 
-				<div class="twrapper"><div class="type indicator clear">
-					<div class="value cst-t3">&nbsp;</div>
-					<div class="name">3T长铲</div>
-				</div></div>
-
-				<div class="twrapper"><div class="type indicator clear">
-					<div class="value cst-t15">&nbsp;</div>
-					<div class="name">1.5T短铲</div>
-				</div></div>
-
-				<div class="twrapper"><div class="type indicator clear">
-					<div class="value cst-guide">&nbsp;</div>
-					<div class="name">牵引车</div>
-				</div></div>
-
-				<div class="twrapper"><div class="type indicator clear">
-					<div class="value cst-swtich1">&nbsp;</div>
-					<div class="name">挑拨至一线</div>
-				</div></div>
 			</div>
 	    <div class="clear header six tc color-menu-type">
 			<div class="twrapper">
