--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -6,10 +6,14 @@
 			<div class="title-wp">
 				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
-				<div class="bold-title single-line">
-		  			<span class="mainTitle">SFM现场管理信息系统</span>
-					<span class="subTitle">ShopFloor Management System</span>
-		  		</div>
+				<div>
+                    <div class="bold-title single-line">
+                        <span class="pageTitle">
+                            <span>SFM现场管理信息系统</span><br>
+                            <span class="subPageTitle">ShopFloor Management System</span>
+                        </span>
+                    </div>
+                </div>
 			</div>
 		</div>
 	  	<div></div>
