--- a/www/templates/kpi-group.html
+++ b/www/templates/kpi-group.html
@@ -6,16 +6,14 @@
 				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
-			  		<div class="bold-title single-line">
-			  			<span class="mainTitle">KPI跟踪</span>
-						<div class="subTitle">
-				  			(<span ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code:''"></span>
-				  			<span ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
-				  			<span ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
-				  		</div>
-
-						</div>
-						
+					<div class="bold-title single-line">
+                        <span class="pageTitle">
+                            <span>KPI跟踪</span><br>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code:''"></span>
+				  			<span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
+				  			<span class="subPageTitle" ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
+                        </span>
+                    </div>
 				</div>
 			</div>
 
