--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -13,11 +13,11 @@
                 <div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
                 <div>
                     <div class="bold-title single-line">
-                        <span class="mainTitle">组织机构图</span>
-                        <div class="subTitle">
-                            (<span ng-bind="selectedCriteria.kuqu.whse_code + '-'"></span>
-                            <span ng-bind="selectedCriteria.banzu.description"></span>)
-                        </div>
+                        <span class="pageTitle">
+                            <span>组织机构图</span><br>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code + '-'"></span>
+                            <span class="subPageTitle"ng-bind="selectedCriteria.banzu.description"></span> )
+                        </span>
                     </div>
                 </div>
             </div>
