--- a/www/templates/cost-view-wall.html
+++ b/www/templates/cost-view-wall.html
@@ -6,14 +6,14 @@
 				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
-			  		<div class="bold-title single-line">
-			  			<span class="mainTitle">移动设备运行状态目视墙</span>
-						<div class="subTitle">
-							(<span ng-bind="selectedCriteria.kuqu.whse_code+'-'">仓库代码</span>
-							<span ng-bind="selectedCriteria.banzu.description+'-'">班组</span>
-							<span ng-bind="selectedCriteria.banci.shift_code">班次</span>)
-						</div>
-			  		</div>
+					<div class="bold-title single-line">
+                        <span class="pageTitle">
+                            <span>移动设备运行状态目视墙</span><br>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code"></span>
+							<span ng-if="!isLine" class="subPageTitle" ng-bind="'-'+selectedCriteria.banzu.description+'-'"></span>
+							<span ng-if="!isLine" class="subPageTitle" ng-bind="selectedCriteria.banci.shift_code"></span>)
+                        </span>
+                    </div>
 				</div>
 			</div>
 		</div>
