--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -6,7 +6,9 @@
 				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
-			  		<div class="bold-title single-line"><span ng-bind="criteria.kuqu?criteria.kuqu.whse_code:''"></span>小组信息板</div>
+			  		<div class="bold-title single-line" style="line-height: 3em;">
+			  			<span style="font-size: 1.2em" ng-bind="criteria.kuqu?criteria.kuqu.whse_code+'小组信息板':'小组信息板'"></span>
+		  			</div>
 				</div>
 			</div>
 		</div>
