--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -7,13 +7,13 @@
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
 					<div class="bold-title single-line">
-			  			<span class="mainTitle">安全绿十字</span>
-						<div class="subTitle">
-							(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
-							<span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description">班组</span>
-							<span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banci.shift_code">班次</span>)
-						</div>
-			  		</div>
+                        <span class="pageTitle">
+                            <span>安全绿十字</span><br>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
+							<span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description">班组</span>
+							<span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+selectedCriteria.banci.shift_code">班次</span>)
+                        </span>
+                    </div>
 				</div>
 			</div>
 		</div>
