--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -6,12 +6,19 @@
 				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
+					<div class="bold-title single-line">
+                        <span class="pageTitle">
+                            <span>外库运作岗位柔性表</span><br>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
+							<span class="subPageTitle" ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
+							<span class="subPageTitle" ng-bind="selectedCriteria.banci.shift_code">班次</span> )
+                        </span>
+                    </div>
+
 			  		<div class="bold-title single-line">
-			  			<span class="mainTitle">外库运作岗位柔性表</span>
+			  			<span class="mainTitle"></span>
 						<div class="subTitle">
-							(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
-							<span ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
-							<span ng-bind="selectedCriteria.banci.shift_code">班次</span>)
+							
 						</div>
 			  		</div>
 				</div>
