--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -22,11 +22,11 @@
                 <div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
                 <div>
                     <div class="bold-title single-line">
-                        <span class="mainTitle" ng-bind="KPITitle"></span>
-                        <span class="subTitle">
-                            (<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
-                            <span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description">班组</span>
-                            <span ng-if="!isLine" ng-hide="aspect=='member'" ng-bind="selectedCriteria.banci.shift_code+'-'">班次</span>)
+                        <span class="pageTitle">
+                            <span ng-bind="KPITitle"></span><br>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code"></span>
+                            <span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description+'-'"></span>
+                            <span class="subPageTitle" ng-if="!isLine" ng-hide="aspect=='member'" ng-bind="selectedCriteria.banci.shift_code"></span>)
                         </span>
                     </div>
                 </div>
