Fix Kqhz comments

--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -54,7 +54,7 @@
 		</div>
     </ion-content>
     <ion-footer-bar>
-		<div class="clear tl anji-font-color mg-tp-1" style="width: 100%; position: absolute;    top: -6em; left: 1em;">
+		<div class="clear tl anji-font-color mg-tp-1" style="height: 6em;position: absolute; top: -6em; padding-top: 0.5em; right: 1em; margin-top: 0; background: #fff; left: 1em;">
 			<span class="fl">说明</span>
 			<ol class="fl mg-lf-1">
 				<li>1. 部门考勤员应认真做好考勤统计工作，如实反映情况，不得弄虚作假</li>
