--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -34,7 +34,7 @@
 		</div>
 	  	<div></div>
 	</ion-header-bar>
-    <ion-content class="bgFF" on-double-tap="goHome('kqhz')" style="    background: #fff; margin: 0 0.5em; border-radius: 0.5em;">
+    <ion-content class="bgFF" style="    background: #fff; margin: 0 0.5em; border-radius: 0.5em;">
     	
 		<div class="kqhz content-wrapper" style="padding-bottom: 8em;">
 			<table>
