--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -27,6 +27,7 @@
 	  	<div></div>
 	</ion-header-bar>
     <ion-content class="bgFF" style="background: #fff; margin: 0 0.5em; border-radius: 0.5em;">
+	    <ion-scroll zooming="true" direction="xy" style="width: 100%; height: 100%">
     	<div style="height: 100%; padding-bottom: 6em; position: relative;">
 		    <div class="kqhz gwrx content-wrapper">
 		    <span class="anji-theme" style="font-size:0.9em" ng-show="loadingStatus!=''" ng-bind="loadingStatus">加载中</span>
@@ -56,6 +57,7 @@
 				
 			</div>
     	</div>
+	 </ion-scroll>
     </ion-content>
     <ion-footer-bar>
 	 	<div style="width:100%;">
