--- a/www/css/style.css
+++ b/www/css/style.css
@@ -611,6 +611,7 @@ ion-footer-bar .color-menu-type.header div.twrapper:last-child{ float: left;}
     bottom: 0.5em;
     right: 0.5em;
     height: initial;
+    float: none;
 }
 .logo-left{
     position: absolute;
@@ -911,10 +912,11 @@ span.arrow-border-up span{
 .kq-date-picker span.kq-cancel, .kq-date-picker span.kq-sure{
     display: inline-block;
     text-align: center;
+    padding: 0.5em 2em;
 }
 .kq-date-picker span.kq-sure{
     color: #FFF;
-    /*padding: 0.1em 1.5em; */
+    padding: 0.5em 2em;
     background-color: #1378E4;
     margin-right: 1.5em
 }
@@ -922,12 +924,12 @@ span.arrow-border-up span{
     display: inline-block;
     text-align: center;
     color: #FFF;
+
     background-color: #424446;
 }
 .kq-date-picker span.email{
     font-size: 2.5em;
-    /*border: 0.1em solid #7DA9D8;*/
-    padding: 0.1em 0.5em;
+    padding: 0.3em 1em;
     vertical-align: middle;
 }
 .kq-date-picker span{
