--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -19,7 +19,7 @@
         <div class="title anji-theme">
             <div class="title-wp">
                 <div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
-                <div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
+                <div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
                 <div>
                     <div class="bold-title single-line">
                         <span class="pageTitle">
