--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -4,7 +4,7 @@
 		<div class="title anji-theme" style="overflow: visible">
 			<div class="title-wp">
 				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
-				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
+				<div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
 			  		<div class="bold-title single-line">
 			  			<div style="height: 100%; display: inline-block; position: relative;">
