--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -10,14 +10,10 @@
         <div class="title anji-theme">
             <div class="title-wp">
                 <div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
-                <div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
+                <div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
                 <div>
-                    <div class="bold-title single-line">
-                        <span class="">设置</span>
-                        <!-- <div class="subTitle">
-                            (<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
-                            <span ng-bind="selectedCriteria.banzu.description">班组</span>)
-                        </div> -->
+                    <div class="bold-title single-line" style="line-height: 3em;">
+                        <span style="font-size: 1.2em">设置</span>
                     </div>
                 </div>
             </div>
