Entry Hover Link

--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -21,7 +21,7 @@
 
     <ion-content scroll="false">
 	    <div class="entryWp">
-        	<a href="#/dash">
+        	<a href="#/dash" class="entry-home">
 	        	<div class="entry" style="left: 15%;">
 		        	<div class="img tc">
 		        		<img src="img/svg/view-board.svg"/>
@@ -33,7 +33,7 @@
 	        		</div>
 	        	</div>
        		</a>
-       		<a href="#/view-board">
+       		<a href="#/view-board" class="entry-home">
 	        	<div class="entry" style="right: 15%;">
 	        		<div class="img tc">
 		        		<img src="img/svg/line-board.svg"/>
