--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -1,8 +1,8 @@
 <ion-view hide-nav-bar="true" hide-back-button="true" style="background: #19426E;">
   <ion-header-bar align-title="center">
 	  	<div></div>
-		<div class="title anji-theme" style="margin-top: 0;">
-			<div class="title-wp">
+		<div class="title anji-theme"  style="margin-top: 0;">
+			<div class="title-wp" style="background-image: url(img/LOG9.jpg);">
 				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
 				<div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
