--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -49,6 +49,15 @@
             </p>
         </div>
 
+        <div style="color: #FFF;">
+            <p>
+                <h3>图片目录
+                    <button class="btn btn-default" ng-click="goToFolderSelector()" type="submit">点击选择</button>
+                </h3>
+                <span ng-bind="settings.folderPath"></span>
+            </p>
+        </div>
+
     </ion-content>
     <ion-footer-bar style="height: 4em;">
     
