--- a/www/templates/folders.html
+++ b/www/templates/folders.html
@@ -23,7 +23,7 @@
     <div class="folder" ng-click="beginBrowseForFiles(f.fullPath)" ng-repeat="f in folders">
       <i class="glyphicon glyphicon-folder-open"></i><span ng-bind="f.name"></span>
     </div>
-    <div ng-bind="msg"></div>
+    <div ng-bind="loading"></div>
     <!-- <ul class="list">
         <li class="item" ng-repeat="f in folders">
           <span ng-bind="f"></span>
