Conver ImagePath to Object

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -54,7 +54,7 @@
                 <h3>图片目录
                     <button class="btn btn-default" ng-click="goToFolderSelector()" type="submit">点击选择</button>
                 </h3>
-                <span ng-bind="settings.imagePath"></span>
+                <span ng-bind="settings.imagePath.name"></span>
             </p>
         </div>
 
