Garden Read Image List

--- a/www/templates/folders.html
+++ b/www/templates/folders.html
@@ -20,7 +20,7 @@
     <div style="background:#FFF; overflow: hidden; height: 3em; position: relative; line-height: 3em;">
       <span ng-click="doDirectoryUp()" style="position: absolute; left: 0; width: 8em; top: 0; height: 3em; text-align: center;">&nbsp;&nbsp;返回上一级&nbsp;&nbsp;</span>
       <label class="item item-input" style="    position: absolute; left: 8em; top: 0; right: 6em; height: 3em; border: 0;">
-        <input type="text" readonly style="background: #FFF;" value="{{folderName}}"></input>
+        <input type="text" readonly style="background: #FFF;" value="{{folderName.fullPath}}"></input>
       </label>
       <button ng-click="setImageFolder()" class="button button-stable" style="position: absolute; right: 0; top: 0; height: 3em; width: 6em; text-align: center; ">确定</button>
     </div>
