--- a/www/templates/garden.html
+++ b/www/templates/garden.html
@@ -22,7 +22,8 @@
   </ion-header-bar>
 
     <ion-content scroll="false">
-      <span style="color:#FFF;" ng-repeat="img in images" ng-bind="img.image"></span>
+      <span style="color:#FFF;" ng-repeat="img in slides" ng-bind="img"></span>
+      <span style="color:#FFF;" ng-bind="msg"></span>
       <div class="entryWp">
           <div class="entry" style="left: 12%; width: 76%; padding: 1em; height: 76%; top: 12%;">
 
